grid for all pleas, adjusted cards so they have fixed heights and any potential overflow will be taken care of. Max 2 lines for headers etc. I put company names into tags over the image and cleaned up the overall look of the card a little. Added some animations as well

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 .landing {
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 5rem);
   width: 100%;
   display: flex;
   flex-direction: column;
