--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -27,6 +27,8 @@
 @media only screen and (min-width: 769px) {
   clr-vertical-nav {
     width: 260px;
+    border-right: 1px solid #ccc;
+    //box-shadow: 0 0 20px 2px rgba(0,0,0,.1);
   }
 
   #sidenav {
