--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -2,7 +2,6 @@
   margin: 0 -1rem;
   padding: 1rem;
   display: block;
-  transform: translateY(-1rem);
 }
 
 .search-box input {
