--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -2,5 +2,12 @@
   flex: 1 1 auto;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  padding: 1rem;
+  padding: 0 1rem;
+}
+
+@media only screen and (min-width: 1440px) {
+  .main-container .content-container .content-area {
+    max-width: 50vw;
+    margin: 0 auto;
+  }
 }
